fix experience animation alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,11 @@
   animation-fill-mode: forwards;
 }
 
+.fadeInTabs {
+  opacity: 0;
+  animation: fadeIn 0.5s forwards 1.5s;
+}
+
 @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -59,6 +64,11 @@
 .fadeInUpText {
   opacity: 0;
   animation: fadeInUp 0.5s forwards 1.5s;
+}
+
+.fadeInUpFiles {
+  opacity: 0;
+  animation: fadeInUp 0.5s forwards 0.5s;
 }
 
 @keyframes fadeDown {
